@@ -26,6 +26,8 @@ obtained in part or whole from RasMol2 by Roger Sayle.
 #include "mol.h"
 #include "bitvec.h"
 
+using namespace std;
+
 ///////////////////////////////////////////////////////////////////////////////
 // Global Definitions
 ///////////////////////////////////////////////////////////////////////////////
